--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -1,5 +1,10 @@
 cucumber.execution.parallel.enabled=true
 cucumber.execution.parallel.config.strategy=fixed
-cucumber.execution.parallel.config.fixed.parallelism=2
+cucumber.execution.parallel.config.fixed.parallelism=1
 cucumber.execution.exclusive-resources.isolated.read-write=org.junit.platform.engine.support.hierarchical.ExclusiveResource.GLOBAL_KEY
 cucumber.execution.exclusive-resources.reads-and-writes-system-properties.read-write=java.lang.System.properties
+
+junit.jupiter.execution.parallel.mode.default=concurrent
+junit.jupiter.execution.parallel.enabled=true
+junit.jupiter.execution.parallel.config.strategy=fixed
+junit.jupiter.execution.parallel.config.fixed.parallelism=1
